# RGDIC

./: .gitignore  BICUBIC_INTERPOLATION.md  CMakeLists.txt  CMakeLists_cuda.txt  CUDA_README.md  IMPLEMENTATION_SUMMARY.md  POI_DOCUMENTATION.md  POI_USAGE_GUIDE.md  README.md  build.bat  build_cpu.bat  build_cuda.bat  common_functions.cpp  common_functions.h  compare_methods.cpp  complete_poi_with_strain.csv  cuda_dic_kernel_precision.cpp  cuda_dic_kernel_precision.h  cuda_dic_kernels_precision.cu  cuda_example.cpp  cuda_rgdic.cpp  cuda_rgdic.h  demo_poi  demo_poi.cpp  demo_poi_results.csv  demo_strain_poi  demo_strain_poi.cpp  dic_processor.cpp  dic_processor.h  example_poi.cpp  global_dic.cpp  global_dic.h  global_dic_main.cpp  icgn_optimizer.cpp  icgn_optimizer.h  main_cpu.cpp  main_cpu_poi  main_cpu_test  main_cuda.cpp  main_global_dic.cpp  (+24 more)
result/: displacement_results.csv
